--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build-base:
     - echo "{\"auths\":{\"$CI_REGISTRY\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 | tr -d '\n')\"},\"$CI_DEPENDENCY_PROXY_SERVER\":{\"auth\":\"$(printf "%s:%s" ${CI_DEPENDENCY_PROXY_USER} "${CI_DEPENDENCY_PROXY_PASSWORD}" | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
   parallel:
     matrix:
-      - OS: [ubuntu-20.04, ubuntu-22.04]
+      - OS: [ubuntu-22.04]
   script:
       # we also enable two less-than-stable features (`--use-new-run` and `--snapshot-mode=redo`) purely for performance
     - /kaniko/executor
@@ -43,7 +43,7 @@ build-prebuilt:
     - echo "{\"auths\":{\"$CI_REGISTRY\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 | tr -d '\n')\"},\"$CI_DEPENDENCY_PROXY_SERVER\":{\"auth\":\"$(printf "%s:%s" ${CI_DEPENDENCY_PROXY_USER} "${CI_DEPENDENCY_PROXY_PASSWORD}" | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
   parallel:
     matrix:
-      - OS: [ubuntu-20.04, ubuntu-22.04]
+      - OS: [ubuntu-22.04]
   script:
       # we also enable two less-than-stable features (`--use-new-run` and `--snapshot-mode=redo`) purely for performance
     - /kaniko/executor
@@ -66,7 +66,7 @@ test:
   needs: ["build-prebuilt"]  # we should make this better once https://gitlab.com/gitlab-org/gitlab/-/issues/254821 gets resolved
   parallel:
     matrix:
-      - OS: [ubuntu-20.04, ubuntu-22.04]
+      - OS: [ubuntu-22.04]
   image: ${CI_REGISTRY_IMAGE}/ci/prebuilt:${CI_COMMIT_SHA}-${OS}
   variables:
     GIT_STRATEGY: none
@@ -89,10 +89,10 @@ test:
 
 test-sanitized:
   stage: test
-  needs: ["build-coreutils"]  # we should make this better once https://gitlab.com/gitlab-org/gitlab/-/issues/254821 gets resolved
+  needs: ["build-base"]  # we should make this better once https://gitlab.com/gitlab-org/gitlab/-/issues/254821 gets resolved
   parallel:
     matrix:
-      - OS: [ubuntu-22.04] # ubuntu 20.04 always fails, probably due to https://discourse.llvm.org/t/use-after-poison-error-in-clang-addattr-when-linking-with-pre-compiled-clang/62978
+      - OS: [ubuntu-22.04]
   image: ${CI_REGISTRY_IMAGE}/ci/coreutils:${CI_COMMIT_SHA}-${OS}
   script:
     - mkdir build
@@ -101,7 +101,7 @@ test-sanitized:
       -DCMAKE_C_FLAGS="-fuse-ld=gold -Wall -Wextra -pedantic -Werror"
       -DCMAKE_CXX_FLAGS="-fuse-ld=gold -Wall -Wextra -pedantic -Werror -fsanitize=address,undefined"
       -DCMAKE_C_COMPILER=gcc-11 -DCMAKE_CXX_COMPILER=g++-11
-      -DLLVM_CONFIG_BINARY=$(which llvm-config-12)
+      -DLLVM_DIR=$(llvm-config-12 --libdir)
       -DCOREUTILS_SOURCE_DIR=/coreutils
       ..
     - ninja -j4
@@ -142,6 +142,5 @@ publish:
   before_script:
     - crane auth login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
-    - crane cp "${CI_REGISTRY_IMAGE}/ci/prebuilt:${CI_COMMIT_SHA}-ubuntu-20.04" "${CI_REGISTRY_IMAGE}:latest-ubuntu-20.04"
     - crane cp "${CI_REGISTRY_IMAGE}/ci/prebuilt:${CI_COMMIT_SHA}-ubuntu-22.04" "${CI_REGISTRY_IMAGE}:latest-ubuntu-22.04"
     - crane cp "${CI_REGISTRY_IMAGE}/ci/prebuilt:${CI_COMMIT_SHA}-ubuntu-22.04" "${CI_REGISTRY_IMAGE}:latest"
