disable test stage until tests actually exist

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,65 +61,64 @@ build-prebuilt:
       --no-push-cache
       --destination "${CI_REGISTRY_IMAGE}/ci/prebuilt:${CI_COMMIT_SHA}-${OS}"
 
-test:
-  stage: test
-  needs: ["build-prebuilt"]  # we should make this better once https://gitlab.com/gitlab-org/gitlab/-/issues/254821 gets resolved
-  parallel:
-    matrix:
-      - OS: [ubuntu-22.04]
-  image: ${CI_REGISTRY_IMAGE}/ci/prebuilt:${CI_COMMIT_SHA}-${OS}
-  variables:
-    GIT_STRATEGY: none
-  script:
-    - cd /product-program/build
-    - ctest --output-on-failure
-  after_script:
-    - > # save output on failure
-      if [ $CI_JOB_STATUS == 'failed' ]; then
-        mkdir "${CI_PROJECT_DIR}/output"
-        cd /product-program/build/test
-        cp -r --parents */Output "${CI_PROJECT_DIR}/output/"
-      fi
-  artifacts:
-    when: on_failure
-    paths:
-      - output
-    expire_in: 1 week
+# test:
+#   stage: test
+#   needs: ["build-prebuilt"]  # we should make this better once https://gitlab.com/gitlab-org/gitlab/-/issues/254821 gets resolved
+#   parallel:
+#     matrix:
+#       - OS: [ubuntu-22.04]
+#   image: ${CI_REGISTRY_IMAGE}/ci/prebuilt:${CI_COMMIT_SHA}-${OS}
+#   variables:
+#     GIT_STRATEGY: none
+#   script:
+#     - cd /product-program/build
+#     - ctest --output-on-failure
+#   after_script:
+#     - > # save output on failure
+#       if [ $CI_JOB_STATUS == 'failed' ]; then
+#         mkdir "${CI_PROJECT_DIR}/output"
+#         cd /product-program/build/test
+#         cp -r --parents */Output "${CI_PROJECT_DIR}/output/"
+#       fi
+#   artifacts:
+#     when: on_failure
+#     paths:
+#       - output
+#     expire_in: 1 week
 
-
-test-sanitized:
-  stage: test
-  needs: ["build-base"]  # we should make this better once https://gitlab.com/gitlab-org/gitlab/-/issues/254821 gets resolved
-  parallel:
-    matrix:
-      - OS: [ubuntu-22.04]
-  image: ${CI_REGISTRY_IMAGE}/ci/coreutils:${CI_COMMIT_SHA}-${OS}
-  script:
-    - mkdir build
-    - cd build
-    - cmake -GNinja
-      -DCMAKE_C_FLAGS="-fuse-ld=gold -Wall -Wextra -pedantic -Werror"
-      -DCMAKE_CXX_FLAGS="-fuse-ld=gold -Wall -Wextra -pedantic -Werror -fsanitize=address,undefined"
-      -DCMAKE_C_COMPILER=gcc-11 -DCMAKE_CXX_COMPILER=g++-11
-      -DLLVM_DIR=$(llvm-config-12 --libdir)
-      -DCOREUTILS_SOURCE_DIR=/coreutils
-      ..
-    - ninja -j4
-    - ASAN_OPTIONS=detect_leaks=0 ctest --output-on-failure
-  after_script:
-    - pwd
-    - > # save output on failure
-      if [ $CI_JOB_STATUS == 'failed' ]; then
-        mkdir output
-        DIR="$(pwd)/output"
-        cd build/test
-        cp -r --parents */Output "$DIR"
-      fi
-  artifacts:
-    when: on_failure
-    paths:
-      - output
-    expire_in: 1 week
+# test-sanitized:
+#   stage: test
+#   needs: ["build-base"]  # we should make this better once https://gitlab.com/gitlab-org/gitlab/-/issues/254821 gets resolved
+#   parallel:
+#     matrix:
+#       - OS: [ubuntu-22.04]
+#   image: ${CI_REGISTRY_IMAGE}/ci/coreutils:${CI_COMMIT_SHA}-${OS}
+#   script:
+#     - mkdir build
+#     - cd build
+#     - cmake -GNinja
+#       -DCMAKE_C_FLAGS="-fuse-ld=gold -Wall -Wextra -pedantic -Werror"
+#       -DCMAKE_CXX_FLAGS="-fuse-ld=gold -Wall -Wextra -pedantic -Werror -fsanitize=address,undefined"
+#       -DCMAKE_C_COMPILER=gcc-11 -DCMAKE_CXX_COMPILER=g++-11
+#       -DLLVM_DIR=$(llvm-config-12 --libdir)
+#       -DCOREUTILS_SOURCE_DIR=/coreutils
+#       ..
+#     - ninja -j4
+#     - ASAN_OPTIONS=detect_leaks=0 ctest --output-on-failure
+#   after_script:
+#     - pwd
+#     - > # save output on failure
+#       if [ $CI_JOB_STATUS == 'failed' ]; then
+#         mkdir output
+#         DIR="$(pwd)/output"
+#         cd build/test
+#         cp -r --parents */Output "$DIR"
+#       fi
+#   artifacts:
+#     when: on_failure
+#     paths:
+#       - output
+#     expire_in: 1 week
 
 format:
   stage: test
