--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -125,7 +125,12 @@ build-prebuilt:
 
 format:
   stage: test
-  needs: ["build-base"]
+  needs:
+    - job: "build-base"
+      parallel:
+        matrix:
+          - OS: ubuntu-22.04
+            LLVM: 12
   image: ${CI_REGISTRY_IMAGE}/ci/base:${CI_COMMIT_SHA}-ubuntu-22.04-llvm-12
   script:
     - find src -iname '*.cpp' -or -iname '*.h' -print | xargs clang-format-12 --dry-run --Werror
