add automatic test lookup

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,10 +1,12 @@
 add_test(NAME _norman_exists COMMAND norman --version)
 
-SET(TESTS
-  "core/function selection.test"
-  "core/multiple functions.test"
-  "NullStmt/basic.test"
-)
+# All short tests are found by cmake
+file(GLOB_RECURSE TESTS CONFIGURE_DEPENDS "*.test")
+
+# Directory-style tests can be appended to the list here
+#list(APPEND TESTS
+#  "core/some test"
+#)
 
 foreach(test IN ITEMS ${TESTS})
   add_test(
