--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(norman
   Norman.cpp
   Config.cpp
+  Context.cpp
   check/Label.cpp
   check/NakedBreak.cpp
   check/NakedContinue.cpp
