implement sizeof/alignof reduction (optional for now)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable(norman
   transform/StmtExpr.cpp
   transform/StringLiteral.cpp
   transform/SwitchStmt.cpp
+  transform/UnaryExprOrTypeTraitExpr.cpp
   transform/VarDecl.cpp
   transform/WhileStmt.cpp
 )
